         menu.[ch],menu_data.dat,movie.[ch],movie_tables.h,rzx.c,
         screenshot.[ch],settings.dat,sound.c,timer/timer.c,ui.c,
         ui/gtk/gtkui.c,ui/{options.dat,ui.h},ui/widget/widget.c,
         ui/win32/win32ui.c: add recording of movies to fmf files 
         (patch #3034770) (Gergely Szasz with contributions from Sergio Baldoví
         and Fred).
20120214 ui/gtk/gtkmouse.c: prefer to include gtk.h (patch #3481334) (rkd77).
20120214 ui/gtk/{binary.c,browse.c,confirm.c,debugger.c,gtkdisplay.c,
         gtkinternals.h,gtkjoystick.c,gtkui.c,memory.c,options.pl,picture.c,
         pokefinder.c,pokemem.c,rollback.c,roms.c,stock.c}: remove use of
         deprecated GTK_SIGNAL_FUNC and GtkSignalFunc (patch #3481335) (rkd77).
20120214 ui/xlib/{xdisplay.c,xui.c}: fix X11 close button, confirm before exit,
         fix some memory leaks and drain the event queue properly (bug #3481425)
         (Sergio).
20120214 ui/gtk/memory.c: remember memory position in GTK+ memory browser and
         pause emulation while browsing memory (part of patch #3487118)
         (Sergio).
20120214 ui/win32/{memorybrowser.c,memorybrowser.rc,win32internals.h}:
         more Win32 UI code improvements;
           - Remember memory position when closing.
           - Pause emulation while browsing because it is a modal dialog.
           - Set focus on list when opening.
           - Allow cursor/page keys to scroll.
           - If the scrollbar position is on the bottom, clicking on the down
               arrow didn't show address 0x0000.
           - Allow mouse wheel to scroll when the list has the focus.
           - Use delta displacement of mouse wheel for scrolling.
           - Reduce flickering when scrolling on Windows XP (or later).
           - Fix compile warnings.
         (rest of patch #3487118) (Sergio).
20120220 sound/sdlsound.c: fix for the removal of sound_stereo_beeper (bug
         #3488677) (Sergio).