@@ -4059,3 +4059,5 @@
          (rest of patch #3487118) (Sergio).
 20120220 sound/sdlsound.c: fix for the removal of sound_stereo_beeper (bug
          #3488677) (Sergio).
+20120220 ui/widget/{menu.c,widget.[ch]}: fix compilation on widget UIs (bug
+         #3488674) (Sergio).
